translation-tool/inputs/source_meta/objects/HnsSiteAttributess__x.object
<CustomObject>
    <description>HnsSiteAttributess</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HnsSiteAttributess</externalName>
    <fields>
        <fullName>CENTRAL_DB_ID__c</fullName>
        <description>CENTRAL_DB_ID</description>
        <externalDeveloperName>CENTRAL_DB_ID</externalDeveloperName>
        <label>Central DB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_FEATURE_ID__c</fullName>
        <description>HNS_FEATURE_ID</description>
        <externalDeveloperName>HNS_FEATURE_ID</externalDeveloperName>
        <label>Feature Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_FTR_NAME__c</fullName>
        <description>HNS_FTR_NAME</description>
        <externalDeveloperName>HNS_FTR_NAME</externalDeveloperName>
        <label>Feature Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_IP_FTR_VAL__c</fullName>
        <description>HNS_IP_FTR_VAL</description>
        <externalDeveloperName>HNS_IP_FTR_VAL</externalDeveloperName>
        <label>Feature Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Site_ID__c</fullName>
        <externalDeveloperName>SITE_ID</externalDeveloperName>
        <label>PS Site ID</label>
        <length>64</length>
        <referenceTargetField>Asset.PS_Site_ID__c</referenceTargetField>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>HnsSiteAttributess</relationshipLabel>
        <relationshipName>HnsSiteAttributess</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>ROW_ADDED_DTTM__c</fullName>
        <description>ROW_ADDED_DTTM</description>
        <externalDeveloperName>ROW_ADDED_DTTM</externalDeveloperName>
        <label>Created Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_ADDED_OPRID__c</fullName>
        <description>ROW_ADDED_OPRID</description>
        <externalDeveloperName>ROW_ADDED_OPRID</externalDeveloperName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_LASTMANT_DTTM__c</fullName>
        <description>ROW_LASTMANT_DTTM</description>
        <externalDeveloperName>ROW_LASTMANT_DTTM</externalDeveloperName>
        <label>Modified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_LASTMANT_OPRID__c</fullName>
        <description>ROW_LASTMANT_OPRID</description>
        <externalDeveloperName>ROW_LASTMANT_OPRID</externalDeveloperName>
        <label>Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SETID__c</fullName>
        <description>SETID</description>
        <externalDeveloperName>SETID</externalDeveloperName>
        <label>Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_ID__c</fullName>
        <description>SITE_ID</description>
        <externalDeveloperName>SITE_ID</externalDeveloperName>
        <label>Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SYNCDTTM__c</fullName>
        <description>SYNCDTTM</description>
        <externalDeveloperName>SYNCDTTM</externalDeveloperName>
        <label>SYNCDTTM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SYNCID__c</fullName>
        <description>SYNCID</description>
        <externalDeveloperName>SYNCID</externalDeveloperName>
        <label>SYNCID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HnsSiteAttributess</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>HNS_FTR_NAME__c</columns>
        <columns>HNS_IP_FTR_VAL__c</columns>
        <columns>SITE_ID__c</columns>
        <columns>HNS_FEATURE_ID__c</columns>
        <columns>CENTRAL_DB_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>HnsSiteAttributess</pluralLabel>
</CustomObject>